@@ -15,6 +15,7 @@ Bugfixes:
 
   * A link from a topic page to itself should be formatted as plain bold text,
     not as a link.  Reported by floatingworld.
+  * XML imports of redirect topics were not redirecting properly.
 
 Translation Updates:
 
